# Behemoth_fb_group_handler

./: Dockerfile  Makefile  README.md  default.env  pyproject.toml
service/: __main__.py  config.py  worker.py
service/clients/backend/: __init__.py  client.py  serializers.py
service/clients/fbclient/: __init__.py  client.py  serializers.py
