[tool.poetry]
name = "behemoth_fb_group_handler"
version = "0.1.0"
description = ""
authors = ["Alexander Lyotov <sippie84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.22.0"
pydantic = "^1.9.0"
pytz = "^2021.3"
orjson = "^3.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
